      seem to work across the board. (also addresses #250074)
    - In static configuration, if the IP address specified turns out to be
      the same as what we suggest for the gateway, nuke the last part of
      the dotted quad because gateway == IP makes no sense. (Closes: #241490)
    - Turn off backup for error messages in static configuration.
  * Bastian Blank
    - Make it buildable again on s390.

 -- Bastian Blank <waldi@debian.org>  Sat, 22 May 2004 15:29:52 +0200

netcfg (0.64) unstable; urgency=medium

  * Joshua Kwan
    - Split out all functions into static.c, dhcp.c, wireless.c.
    - Remove dep alternative to busybox-cvs-udeb etc., since udhcpc is no
      longer available in any initrd. This causes businesscard and netinst
      installs to fail because busybox is already provided and hence gets
      used.
    - Remove udhcpc support in dhcp.c.
    - Port wireless fixes back to netcfg-static and netcfg-dhcp, which
      have been rather neglected lately.
    - Fix the GO_BACK interaction between WEP and ESSID configuration.
    - Switch to using iproute for everything, a step towards removing
      ifconfig and route applets from busybox.
    - Add amd64 support. (Closes: #249363)
    - Open one set of socket FDs and use them for the whole runtime.
    - Write loopback all the time, even when you abort network config.
      (Closes: #248636)
    - Redesign DHCP strategy with a new template that uses a select,
      allowing the user to clearly alternate to static network config
      (Closes: #244901, #227722)
    - Display a brief note when DHCP lease gets acquired. (Closes: #247751)
    - Now we can ask for a DHCP hostname to add. (Closes: #236533, #239591)
    - If we didn't use one, see if the server is offering us one and seed
      netcfg/get_hostname with it. (Closes: #239121, #240701)
    - Failing that, bring the interface up and try to reverse-resolve
      the IP address into a hostname.